Fixed button spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,12 +43,15 @@ body { padding-top: 5px; }
 // }
 
 // body {
-//   \\background-image: image-url('jellyfish.jpg');
+//   background-image: image-url('jellyfish.jpg');
 //   background: url('jellyfish.jpg');
 //   background-repeat: no-repeat;
 //   background-size: 100%;
 // }
 
 .btn {
-  box-shadow: 1px 2px 5px #000000;   
+  box-shadow: 1px 2px 5px #000000;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
